--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <ul>
                             <li>Name: K.Naga Yamini</li>
                             <li>Age: 20</li>
-                            <li>Occupation: Pursuing BTECH 3rd year</li>99
+                            <li>Occupation: Pursuing BTECH 3rd year</li>
                          </ul>
                     </div>
                     <div class="col-md-6">
